# NLP_100_Exercise_Python

./: .env  ai.ja.txt.parsed  pyproject.toml
src/NewsAggregatorDataset/: test.txt  train.txt  valid.txt
src/nlp100/01/: 00.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py
src/nlp100/02/: 10.py  11.py  12.py  13.py  15.py  16.py  17.py  18.py  19.py
src/nlp100/03/: 22.py  23.py  25.py
src/nlp100/chapter_1/: No_01.py  No_09.py
src/nlp100/chapter_2/: No_14.py
src/nlp100/chapter_3/: No_20.py  No_21.py  No_24.py  No_25.py  No_26.py  No_27.py
src/nlp100/chapter_4/: No_30.py  No_31.py  No_32.py  No_33.py  No_34.py  No_35.py  No_36.py  No_37.py  No_38.py
src/nlp100/chapter_5/: No_40.py  No_41.py  No_42.py  No_43.py  No_44.py  No_45.py  No_46.py  No_47.py  No_48.py  No_49.py
src/nlp100/chapter_6/: No_50.py  No_51.py  No_52.py  No_53.py  No_54.py  No_55.py  No_56.py  No_57.py  No_58.py  No_59.py
src/nlp100/chapter_7/: No_60.py  No_61.py  No_62.py  No_63.py  No_64.py  No_65.py  No_66.py  No_67.py  No_68.py  No_69.py
src/nlp100/chapter_8/: No_70.py  No_71.py  No_72.py  No_73.py  No_74.py  No_75_76.py  No_77.py  No_78.py  No_79.py
src/parsed/: sample.parsed
src/text/: result_45.txt  result_46.txt  result_48.txt
src/text/divisions/: division0.txt  division1.txt  division2.txt
